--- a/app/build.gradle
+++ b/app/build.gradle
@@ -31,9 +31,8 @@ dependencies {
 
     implementation 'de.hdodenhof:circleimageview:3.0.1'
 
-    def nav_version = "2.3.0-beta01"
-    implementation "androidx.navigation:navigation-fragment:$nav_version"
-    implementation "androidx.navigation:navigation-ui:$nav_version"
+    implementation "androidx.navigation:navigation-fragment:2.3.0-rc01"
+    implementation "androidx.navigation:navigation-ui:2.3.0-rc01"
 
     implementation 'androidx.legacy:legacy-support-v4:1.0.0'
     implementation 'com.google.android.gms:play-services-location:17.0.0'
@@ -42,7 +41,7 @@ dependencies {
     implementation 'com.squareup.picasso:picasso:2.5.2'
     implementation 'androidx.cardview:cardview:1.0.0'
 
-    implementation 'com.google.firebase:firebase-database:19.3.0'
+    implementation 'com.google.firebase:firebase-database:19.3.1'
     implementation 'com.google.firebase:firebase-storage:19.1.1'
     testImplementation 'junit:junit:4.12'
     androidTestImplementation 'androidx.test:runner:1.2.0'
