--- a/app/build.gradle
+++ b/app/build.gradle
@@ -19,8 +19,11 @@ android {
         }
     }
 
-    dataBinding {
-        enabled = true
+    buildFeatures {
+        dataBinding = true
+        viewBinding = true
+
+
     }
 }
 
@@ -31,8 +34,8 @@ dependencies {
 
     implementation 'de.hdodenhof:circleimageview:3.0.1'
 
-    implementation "androidx.navigation:navigation-fragment:2.3.0-rc01"
-    implementation "androidx.navigation:navigation-ui:2.3.0-rc01"
+    implementation "androidx.navigation:navigation-fragment:2.3.0"
+    implementation "androidx.navigation:navigation-ui:2.3.0"
 
     implementation 'androidx.legacy:legacy-support-v4:1.0.0'
     implementation 'com.google.android.gms:play-services-location:17.0.0'
